syntax = "proto3";

package secondparallel;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.acme.secondparallel.grpc";
option java_outer_classname = "SecondParallel";

service SecondParallelService {
  rpc pass(google.protobuf.Empty) returns (PassResponse) {}
}

message PassResponse {
  double busywaitTime = 1;
}