syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.acme.firstparallel.grpc";

service FirstParallelService {
  rpc pass(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}